<resources>
    <string name="app_name">Task1</string>
    <string name="login">login</string>
    <string name="username">Username</string>
    <string name="enter_id">Enter ID</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="LOGIN">LOGIN</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="_login">Login</string>
    <string name="or">Or</string>
    <string name="regiter_here">Regiter Here</string>
    <string name="dont_have_a_account_">Dont have a Account ?</string>
    <string name="button_1">button_1</string>
    <string name="button2">button2</string>
    <string name="button5">button5</string>
    <string name="button3">button3</string>
    <string name="button4">button4</string>
    <string name="button6">button6</string>
    <string name="button7">button7</string>
    <string name="profile">profile</string>
    <string name="h_v_t_n_nguy_n_h_u_l_m">Họ Và Tên : Nguyễn Hữu Lâm</string>
    <string name="ng_y_sinh_13_8_2004">Ngày Sinh : 13/8/2004</string>
    <string name="first_avtiviyy_running">First avtiviyy running</string>
    <string name="start_activity">Start activity</string>
    <string name="activity_second_running">Activity Second running</string>
    <string name="dong_y_voi_dieu_khoan">Dong y voi dieu Khoan</string>
    <string name="yes_no">Yes/No</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="click_me">Click Me</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="choose_gender">Choose Gender</string>
    <string name="chon_do_tuoi_cua_ban">Chon do tuoi cua ban</string>
    <string name="_15_20">15-20</string>
    <string name="_15_25">15-25</string>
    <string name="_25_35">25-35</string>
    <string name="_35_45">35-45</string>
</resources>