<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:columnCount="3"
    android:rowCount="4"
    android:padding="15dp"
    android:background="#F1E9E9">
    <Button
        android:id="@+id/button1"
        android:text="@string/button_1"
        android:layout_gravity="left|top"/>
    <Button
        android:id="@+id/button2"
        android:text="@string/button2"
        android:layout_gravity="top|right"
        android:layout_column="2"
        android:layout_row="0"/>
    <Button
        android:id="@+id/buton3"
        android:text="@string/button3"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_width="213dp"
        android:layout_gravity="fill_horizontal|top"
        android:layout_columnSpan="3"/>
    <Button
        android:id="@+id/button4"
        android:text="@string/button4"
        android:layout_gravity="center|top"
        android:layout_column="0"
        android:layout_row="2"
        android:layout_columnSpan="3"/>
    <Button
        android:id="@+id/button5"
        android:text="@string/button5"
        android:layout_column="0"
        android:layout_row="3"
        android:layout_gravity="left|top"/>
    <Button
        android:id="@+id/button6"
        android:text="@string/button6"
        android:layout_column="0"
        android:layout_row="3"
        android:layout_columnSpan="3"
        android:layout_gravity="center|top"/>
    <Button
        android:id="@+id/button7"
        android:text="@string/button7"
        android:layout_column="2"
        android:layout_row="3"
        android:layout_gravity="right|top"/>

</GridLayout>