<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/gridlayout"
    android:padding="15dp"
    android:orientation="horizontal"
    android:columnCount="3"
    android:rowCount="3"
    android:background="#0AD4ED">
    <Button
        android:id="@+id/button1"
        android:text="@string/button_1"
        android:layout_gravity="left|top"/>
    <Button
        android:id="@+id/button4"
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/button_1"
        android:layout_gravity="left|top"/>
    <Button
        android:id="@+id/button5"
        android:layout_width="213dp"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="1"
        android:layout_columnSpan="2"
        android:text="@string/button5"/>
    <Button
        android:id="@+id/button2"
        android:layout_column="2"
        android:layout_row="0"
        android:layout_gravity="left|top"
        android:text="@string/button2"
        />
    <Button
        android:id="@+id/button3"
        android:layout_column="2"
        android:layout_row="0"
        android:layout_gravity="right|top"
        android:text="@string/button3"
        tools:ignore="RtlHardcoded" />
</GridLayout>