<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="#ffe4c4"
    android:orientation="vertical"
    android:rowCount="2"
    android:columnCount="2">
    <TextView
        android:text="@string/profile"
        android:textStyle="bold"
        android:textSize="50sp"
        android:textColor="#BB10D5"
        android:layout_gravity="center|top"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_columnSpan="2"/>
    <ImageView
        android:layout_width="172dp"
        android:layout_height="201dp"
        android:src="@drawable/img_1"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_marginTop="15dp"/>
    <TextView
        android:text="@string/h_v_t_n_nguy_n_h_u_l_m"
        android:textStyle="italic|bold"
        android:layout_column="1"
        android:layout_row="1"
        android:layout_gravity="left|top"
        android:textSize="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"/>
    <TextView
        android:text="@string/ng_y_sinh_13_8_2004"
        android:textStyle="italic|bold"
        android:layout_column="1"
        android:layout_row="1"
        android:layout_gravity="left|top"
        android:textSize="30dp"
        android:layout_marginTop="75dp"
        android:layout_marginStart="10dp"/>
    <TextView
        android:text="@string/ng_y_sinh_13_8_2004"
        android:textStyle="italic|bold"
        android:layout_column="1"
        android:layout_row="1"
        android:layout_gravity="left|top"
        android:textSize="30dp"
        android:layout_marginTop="125dp"
        android:layout_marginStart="10dp"/>

</GridLayout>