<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#f5f5dc"
    android:padding="16dp">
<!--    <ImageView-->
<!--        android:layout_width="250sp"-->
<!--        android:layout_height="200sp"-->
<!--        android:src="@drawable/img"-->
<!--        tools:layout_editor_absoluteX="80dp"-->
<!--        tools:ignore="MissingConstraints"-->
<!--        android:id="@+id/img"/>-->

<!--    <EditText-->
<!--        android:layout_width="300dp"-->
<!--        android:layout_height="50dp"-->
<!--        tools:layout_editor_absoluteX="55dp"-->
<!--        tools:layout_editor_absoluteY="252dp"-->
<!--        android:hint="@string/enter_your_name"-->
<!--        tools:ignore="MissingConstraints" />-->
<!--    <EditText-->
<!--        android:layout_width="300dp"-->
<!--        android:layout_height="50dp"-->
<!--        tools:layout_editor_absoluteX="55dp"-->
<!--        tools:layout_editor_absoluteY="300dp"-->
<!--        android:hint="@string/enter_your_name"-->
<!--        tools:ignore="MissingConstraints" />-->
    <ImageView
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:src="@drawable/img"
        android:id="@+id/imageView_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_email"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText_account"
        app:layout_constraintTop_toBottomOf="@id/imageView_logo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:padding="12dp"
        android:background="#ffffff"
        android:layout_marginTop="50dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:id="@+id/editText_password"
        app:layout_constraintTop_toBottomOf="@id/editText_account"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:padding="12dp"
        android:background="#ffffff"
        android:layout_marginTop="20dp"/>
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/button_login"
        app:layout_constraintTop_toBottomOf="@id/editText_password"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/_login"
        android:textStyle="bold"
        android:textAllCaps="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_or"
        android:text="@string/dont_have_a_account_"
        app:layout_constraintTop_toBottomOf="@id/button_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="10dp"
        android:textColor="#dc143c"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regiter_here"
        app:layout_constraintTop_toBottomOf="@id/text_or"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="10dp"
        android:textColor="#0000ff"/>
</androidx.constraintlayout.widget.ConstraintLayout>